[tool.poetry]
name = "san"
version = "0.1.0"
description = ""
authors = ["None"]

[tool.poetry.dependencies]
python = "^3.7"
cupy = "^8.3.0"
opencv-python = "^4.4.0"
torch = "^1.7.1"
torchvision = "^0.8.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
